<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="tv">Tv</string>
    <string name="movie">Movie</string>
    <string name="tanggal">Date</string>
    <string name="deskripsi">Description</string>
    <string name="daftar_film">Movie List</string>
    <string name="foto_film">Movie Image</string>
    <string name="foto">Photo</string>
    <string name="change_language_settings">Language Settings</string>

    <string name="language">en-US</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="delete_favorite">Unfavorite</string>
    <string name="remove_favorite">Remove Favorite Movie</string>
    <string name="toast_add">The movie was successfully added to the Favorites List</string>
    <string name="toast_remove">The movie was successfully deleted to the Favorites List</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget">Movie Favorite Widget</string>
    <string name="empty_text">Empty Data</string>

    <string name="message_daily">Let\'s watch some good movies</string>
    <string name="release_today_msg">%s Release today, don\'t forget to watch it!</string>
    <string name="movie_name">Movie Name</string>
    <string name="search">Search</string>

    <string name="notification_setting">Notification Setting</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
