<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    app:cardBackgroundColor="@color/colorCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_movie_photo"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginLeft="5dp"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/foto_film"
        android:layout_marginStart="5dp" />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_movie_photo"
        android:text="@string/daftar_film"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@id/img_movie_photo"
        android:layout_marginStart="26dp" />
    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@id/img_movie_photo"
        android:text="@string/tanggal"
        android:layout_toEndOf="@id/img_movie_photo"
        android:layout_marginStart="26dp" />
    <TextView
        android:id="@+id/txt_description"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_date"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@id/img_movie_photo"
        android:text="@string/deskripsi"
        android:layout_marginBottom="10dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_toEndOf="@id/img_movie_photo"
        android:layout_marginStart="26dp" />

</RelativeLayout>
</android.support.v7.widget.CardView>