<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_photo2"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:contentDescription="@string/foto"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_name2"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/daftar_film"
                android:textColor="@color/colorBlack"
                android:textSize="27sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_photo2" />

            <ToggleButton
                android:id="@+id/myFavButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_description2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_date2"
                app:layout_constraintTop_toBottomOf="@+id/txt_name2" />

            <TextView
                android:id="@+id/tv_add_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/add_to_favorite"
                app:layout_constraintBottom_toBottomOf="@+id/myFavButton"
                app:layout_constraintStart_toEndOf="@+id/myFavButton"
                app:layout_constraintTop_toTopOf="@+id/myFavButton"
                app:layout_constraintVertical_bias="0.285" />

            <TextView
                android:id="@+id/txt_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/tanggal"
                app:layout_constraintStart_toStartOf="@+id/txt_name2"
                app:layout_constraintTop_toBottomOf="@+id/txt_name2" />

            <TextView
                android:id="@+id/txt_description2"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/deskripsi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_name2"
                app:layout_constraintTop_toBottomOf="@+id/txt_date2" />

        </android.support.constraint.ConstraintLayout>

</ScrollView>